core/scss/ui/_cards.scss
/* ... */
.card-body-scrollable {
  overflow: auto;
}

/**
Card optinos
 */
.card-options {
  top: 1.5rem;
  inset-inline-end: 0.75rem;
  display: flex;
  margin-inline-start: auto;
}

.card-options-link {
  display: inline-block;
  min-width: 1rem;
  margin-inline-start: 0.25rem;
  color: var(--#{$prefix}secondary);
}

/**
Card status
 */
.card-status-top {
  position: absolute;
  top: 0;
  inset-inline-end: 0;
  inset-inline-start: 0;
  height: $card-status-size;
  @include border-radius(var(--#{$prefix}card-border-radius) var(--#{$prefix}card-border-radius) 0 0);
}

.card-status-start {
  position: absolute;
  inset-inline-end: auto;
  bottom: 0;
  width: $card-status-size;
  height: 100%;
  @include border-radius(var(--#{$prefix}card-border-radius) 0 0 var(--#{$prefix}card-border-radius));
}

.card-status-bottom {
  position: absolute;
  top: initial;
  bottom: 0;
  width: 100%;
  height: $card-status-size;
  @include border-radius(0 0 var(--#{$prefix}card-border-radius) var(--#{$prefix}card-border-radius));
}

/**
Card table
 */
.card-table {
  margin-bottom: 0 !important;

  tr {
    td,
    th {
      &:first-child {
        padding-left: $card-spacer-x;
        border-left: 0;
        border-top-left-radius: var(--#{$prefix}card-border-radius);
      }

      &:last-child {
        padding-right: $card-spacer-x;
        border-right: 0;
        border-top-right-radius: var(--#{$prefix}card-border-radius);
        padding-inline-start: $card-spacer-x;
        border-inline-start: 0;
      }

      &:last-child {
        padding-inline-end: $card-spacer-x;
        border-inline-end: 0;
      }
    }
  }

  thead,
  tbody,
  tfoot {
    &:last-child {
      tr:last-child {
        > *:last-child {
          border-end-end-radius: calc(var(--#{$prefix}card-border-radius) - var(--#{$prefix}card-border-width));
        }

        > *:first-child {
          border-end-start-radius: calc(var(--#{$prefix}card-border-radius) - var(--#{$prefix}card-border-width));
        }
      }
    }

    tr {
      &:first-child {
        border-top: 0;

        td,
        th {
          border-top: 0;
        }
      }
    }
  }

  tbody {
    tr {
      &:last-child {
        td {
          border-bottom: 0;
        }
      }
    }
  }

  tfoot {
    tr {
      &:last-child {
        border-bottom: 0;
      }
    }
  }

  .card-body + & {
    border-top: var(--#{$prefix}border-width) var(--#{$prefix}border-style) var(--#{$prefix}table-border-color);
  }
}

/*
Card code
 */
.card-code {
  padding: 0;

  .highlight {
    margin: 0;
    border: 0;
  }

  pre {
    margin: 0 !important;
    border: 0 !important;
  }
}

/*
Card chart
 */
.card-chart {
  position: relative;
  z-index: 1;
  height: 3.5rem;
}

/**
Card avatar
 */
.card-avatar {
  margin-inline-start: auto;
  margin-inline-end: auto;
  box-shadow: 0 0 0 0.25rem var(--#{$prefix}card-bg, var(--#{$prefix}bg-surface));
  margin-top: calc(-1 * calc(var(--#{$prefix}avatar-size) * 0.5));
}

/*
Card list group
 */
.card-list-group {
  .card-body + & {
    border-top: var(--#{$prefix}border-width) var(--#{$prefix}border-style) var(--#{$prefix}border-color);
  }

  .list-group-item {
    padding-inline-end: $card-spacer-x;
    padding-inline-start: $card-spacer-x;
    border-inline-end: 0;
    border-inline-start: 0;
    border-radius: 0;

    &:last-child {
      border-bottom: 0;
    }

    &:first-child {
      border-top: 0;
    }
  }
}

// Card tabs
.card-tabs {
  .nav-tabs {
    position: relative;
    z-index: $zindex-dropdown;
    border-bottom: 0;

    .nav-link {
      background: $card-cap-bg;
      border: $card-border-width var(--#{$prefix}border-style) $card-border-color;

      &.active,
      &:active,
      &:hover {
        border-color: $card-border-color;
        color: var(--#{$prefix}body-color);
      }

      &.active {
        color: $headings-color;
        background: var(--#{$prefix}card-bg, var(--#{$prefix}bg-surface));
        border-bottom-color: transparent;
      }
    }

    .nav-item {
      &:not(:first-child) {
        .nav-link {
          border-start-start-radius: 0;
        }
      }

      &:not(:last-child) {
        .nav-link {
          border-start-end-radius: 0;
        }
      }

      + .nav-item {
        margin-inline-start: calc(-1 * #{$card-border-width});
      }
    }
  }

  .nav-tabs-bottom {
    margin-bottom: 0;

    .nav-link {
      margin-bottom: 0;

      &.active {
        border-top-color: transparent;
      }
    }

    .nav-item {
      margin-top: calc(-1 * #{$card-border-width});
      margin-bottom: 0;

      .nav-link {
        border-bottom: $card-border-width var(--#{$prefix}border-style) $card-border-color;
        @include border-radius(0 0 $card-border-radius $card-border-radius);
      }

      &:not(:first-child) .nav-link {
        border-end-start-radius: 0;
      }

      &:not(:last-child) .nav-link {
        border-end-end-radius: 0;
      }
    }
  }

  .card {
    border-end-start-radius: 0;
  }

  .nav-tabs + .tab-content .card {
    border-end-start-radius: var(--#{$prefix}card-border-radius);
    border-start-start-radius: 0;
  }
}

/**
Card note
*/
.card-note {
  --#{$prefix}card-bg: #fff7dd;
  --#{$prefix}card-border-color: #fff1c9;
}

/**
Card gradient
*/
.card-gradient {
  --#{$prefix}card-gradient-direction: 180deg;
  --#{$prefix}card-gradient-opacity: 86%;
  --#{$prefix}card-gradient: var(--tblr-primary), var(--tblr-primary);

  background:
    radial-gradient(ellipse at center, var(--#{$prefix}card-bg) 0%, color-mix(in srgb, var(--#{$prefix}card-bg) 0%, transparent) 80%) border-box,
    linear-gradient(var(--#{$prefix}card-gradient-direction), color-mix(in srgb, var(--#{$prefix}card-bg) var(--#{$prefix}card-gradient-opacity), transparent) 0%, var(--#{$prefix}card-bg) 40%) border-box,
    linear-gradient(calc(270deg + var(--#{$prefix}card-gradient-direction)), var(--#{$prefix}card-gradient)) border-box;
}
/* ... */

